# utility_manager

./: .gitignore  README.md  Taskfile.yml  planning_table.md  project_plan.md
backend/: .gitignore  README.md  Taskfile.yml  pyproject.toml
backend/app/: conftest.py  main.py  requirements.txt
backend/app/core/: db_handler.py  models.py  services.py
backend/app/tests/: test_main.py
backend/app/tests/core/: test_db_handler.py  test_models.py  test_services.py
frontend/: .gitignore  README.md  Taskfile.yml  aws-exports.js  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: ConfirmSingUp.vue  Error404.vue  LoadingSpinner.vue  NavBar.vue  SignIn.vue  SignUp.vue
frontend/src/router/: index.js
frontend/src/services/: main.js
frontend/src/stores/: auth.js
frontend/src/views/: Home.vue
infrastructure/: .terraform.lock.hcl  api_gateway.tf  cognito.tf  dynamodb.tf  lambda.tf  outputs.tf  s3_bucket.tf  variables.tf
