[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.37.25",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "moto>=5.1.3",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "types-boto3>=1.37.34",
]

[tool.pytest.ini_options]
pythonpath = "backend/app"
